--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BrowseMoviesActivity">
+        <activity android:name=".activities.BrowseMoviesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,11 +18,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MovieDetailsActivity"
-            android:parentActivityName=".BrowseMoviesActivity">
+            android:name=".activities.MovieDetailsActivity"
+            android:parentActivityName=".activities.BrowseMoviesActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".BrowseMoviesActivity"/>
+                android:value=".activities.BrowseMoviesActivity"/>
         </activity>
     </application>
 
