--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".activities.BrowseMoviesActivity"
             android:launchMode="singleTop">
@@ -26,6 +27,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.BrowseMoviesActivity" />
         </activity>
+
+        <provider
+            android:authorities="name.meszaros.gabor.popularmovies"
+            android:name=".data.MoviesProvider"
+            android:exported="false" />
+
     </application>
 
 </manifest>
